syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "a.yandex-team.ru/alice/protos/api/matrix";

package NMatrix.NApi;

message TTechnicalPush {
    string TechnicalPushId = 1;

    oneof Content {
        // NAlice.NSpeechKit.TDirective from alice/megamind/protos/speechkit/directives.proto
        google.protobuf.Any SpeechKitDirective = 2;
    }
}
